<resources>
    <string name="app_name">Intents Application</string>
    <string name="open_web_page">Web Page</string>
    <string name="open_calling">Calling</string>
    <string name="open_sms">SMS</string>
    <string name="open_email">Email</string>
    <string name="search_google">Search Google</string>
    <string name="enter_mobile_number">Enter The Mobile Number</string>
    <string name="enter_message">Enter The Message</string>
    <string name="sms">SMS</string>
    <string name="title_activity_email">EmailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_email_address">Enter The Email Address</string>
    <string name="enter_email_subject">Enter The Email Subject</string>
    <string name="enter_email_body">Enter The Email Body</string>
</resources>